versions/v2.9/modules/en/pages/observability/rancher-project-tools.adoc
= Project Tools for Logging, Monitoring, and Visibility
:page-languages: [en, zh]
:revdate: 2024-10-03
:page-revdate: {revdate}
:community-path: reference-guides/rancher-project-tools.adoc 
:product-path: observability/rancher-project-tools.adoc

Rancher contains a variety of tools that aren't included in Kubernetes to assist in your DevOps operations. Rancher can integrate with external services to help your clusters run more efficiently.

== Notifiers and Alerts

Notifiers and alerts are two features that work together to inform you of events in the Rancher system. Before they can be enabled, the monitoring application must be installed.

Notifiers are services that inform you of alert events. You can configure notifiers to send alert notifications to staff best suited to take corrective action. Notifications can be sent with Slack, email, PagerDuty, WeChat, and webhooks.

Alerts are rules that trigger those notifications. Before you can receive alerts, you must configure one or more notifier in Rancher. The scope for alerts can be set at either the cluster or project level.

== Logging

Logging is helpful because it allows you to:

* Capture and analyze the state of your cluster
* Look for trends in your environment
* Save your logs to a safe location outside of your cluster
* Stay informed of events like a container crashing, a pod eviction, or a node dying
* More easily debug and troubleshoot problems

Rancher can integrate with Elasticsearch, splunk, kafka, syslog, and fluentd.

For details, refer to the xref:observability/logging/logging.adoc[logging section.]

== Monitoring

Using Rancher, you can monitor the state and processes of your cluster nodes, Kubernetes components, and software deployments through integration with https://prometheus.io/[Prometheus], a leading open-source monitoring solution. For details, refer to the xref:observability/monitoring-and-dashboards/monitoring-and-dashboards.adoc[monitoring section.]
